--- a/public/views/nova-receita.html
+++ b/public/views/nova-receita.html
@@ -35,7 +35,7 @@
           <h3>Nome da Receita</h3>
           <div class="notepad-block">
             <div class="notepad-item-holder">
-              <input class="notepad-item"/>
+              <input data-ng-model="receita.name" class="notepad-item"/>
             </div>
           </div>
           <div style="margin-top: 30px" class="l-receita-image row">
