Update image uploader on nova-receita.jade

--- a/public/assets/stylesheets/sass/global/components/_recipe-block.sass
+++ b/public/assets/stylesheets/sass/global/components/_recipe-block.sass
@@ -95,5 +95,6 @@
       background: $brand-primary
       color: $gray-dark
       text-decoration: underline
+      cursor: pointer
       i
         text-decoration: none
