--- a/public/assets/stylesheets/sass/global/components/_fileinput.sass
+++ b/public/assets/stylesheets/sass/global/components/_fileinput.sass
@@ -16,7 +16,7 @@
     cursor: pointer
   
 .fileinput
-  margin-bottom: 9px
+  width: 100%
   display: inline-block
   .form-control
     padding-top: 7px
@@ -40,6 +40,9 @@
     vertical-align: middle
   
 
+.fileinput-new.fileinput-holder
+  margin: 10px 20px 20px
+
 .fileinput-exists .fileinput-new,
 .fileinput-new .fileinput-exists
   display: none
@@ -59,8 +62,10 @@
 .fileinput.input-group
   display: table
 
-.fileinput-preview img
-  max-width: 100%
+.fileinput-preview
+  width: 100%
+  img
+    max-width: 100%
 
 // Not 100% correct, but helps in typical use case
 .fileinput-new.input-group .btn-file,
