--- a/public/assets/stylesheets/sass/global/layouts/_receitas.sass
+++ b/public/assets/stylesheets/sass/global/layouts/_receitas.sass
@@ -72,8 +72,10 @@
 
 
   .l-receita-label
+    margin-top: 25px
+    margin-bottom: 10px
     font-family: $font-family-serif
-    font-size: 18px
+    font-size: 24px
     font-weight: normal
 
   .l-receita-btn-submit
