--- a/public/views/nova-receita.html
+++ b/public/views/nova-receita.html
@@ -32,13 +32,13 @@
       </div>
       <div class="col-md-8">
         <article class="l-receita-content">
-          <h3>Nome da Receita</h3>
+          <h3 class="l-receita-label">Nome da Receita</h3>
           <div class="notepad-block">
             <div class="notepad-item-holder">
               <input data-ng-model="recipe.name" class="notepad-item"/>
             </div>
           </div>
-          <h3>Imagem da Receita</h3>
+          <h3 class="l-receita-label">Imagem da Receita</h3>
           <div class="l-receita-image">
             <div data-provides="fileinput" class="fileinput fileinput-new">
               <div data-trigger="fileinput" class="fileinput-preview"></div>
@@ -53,7 +53,7 @@
                 <h5><i class="icon icon-clock-1"> </i>
                   <div class="l-receita-info-caption">
                     <div class="l-receita-info-input">
-                      <input class="form-control"/>
+                      <input data-ng-model="recipe.numberOfPortions" class="form-control"/>
                     </div>&nbsp;min
                   </div>
                 </h5>
@@ -62,7 +62,7 @@
                 <h5><i class="icon icon-user-1"> </i>
                   <div class="l-receita-info-caption">
                     <div class="l-receita-info-input">
-                      <input class="form-control"/>
+                      <input data-ng-model="recipe.preparationTime" class="form-control"/>
                     </div>&nbsp;porções
                   </div>
                 </h5>
@@ -71,14 +71,14 @@
                 <h5><i class="icon icon-beaker-1"> </i>
                   <div class="l-receita-info-caption">
                     <div class="l-receita-info-input">
-                      <select data-ng-model="recipe.difficulty.selected" ng-options="item.label for item in recipe.difficulty.options" class="form-control"></select>
+                      <select data-ng-model="recipe.difficulty.selected" ng-options="item.name for item in recipe.difficulty.options" class="form-control"></select>
                     </div>
                   </div>
                 </h5>
               </li>
             </ul>
           </div>
-          <h3 class="l-receita-section-titl">Ingredientes</h3>
+          <h3 class="l-receita-label">Ingredientes</h3>
           <div class="notepad-block">
             <div class="notepad-block-heading"></div>
             <div data-ng-repeat="ingredient in recipe.ingredients" class="notepad-item-holder"><span class="notepad-number">
