Update angular routes

--- a/public/layouts/nova-receita.jade
+++ b/public/layouts/nova-receita.jade
@@ -29,24 +29,23 @@ div.page-receita
         //-- Main menu
         nav.main-menu(role="navigation")
           ul.nav.nav-pills.nav-stacked
-            li
+            li.active
               a(href="#/")
                 |Home
                 div.link-icon
                   i.icon.icon-shop
 
             li
-              a(href="#/receitas/2")
+              a(href="#/receitas")
                 |Receitas
                 div.link-icon
                   i.icon.icon-food-1
 
-            li.active
-              a(href="#/nova")
+            li
+              a(href="#/receitas/nova")
                 |Nova Receita
                 div.link-icon
                   i.icon.icon-doc-1
-
 
       div.col-md-8
 
