--- a/public/views/nova-receita.html
+++ b/public/views/nova-receita.html
@@ -21,11 +21,11 @@
       <div class="col-md-4">
         <nav role="navigation" class="main-menu">
           <ul class="nav nav-pills nav-stacked">
-            <li><a href="#/">Home
+            <li class="active"><a href="#/">Home
                 <div class="link-icon"><i class="icon icon-shop"></i></div></a></li>
-            <li><a href="#/receitas/2">Receitas
+            <li><a href="#/receitas">Receitas
                 <div class="link-icon"><i class="icon icon-food-1"></i></div></a></li>
-            <li class="active"><a href="#/nova">Nova Receita
+            <li><a href="#/receitas/nova">Nova Receita
                 <div class="link-icon"><i class="icon icon-doc-1"></i></div></a></li>
           </ul>
         </nav>
