Add recipeDifficulty filter

--- a/public/layouts/receita.jade
+++ b/public/layouts/receita.jade
@@ -71,7 +71,7 @@ div.page-receita
               li.col-md-4
                 h5
                   i.icon.icon-beaker-1 
-                  div.l-receita-info-caption {{ recipe.difficulty }}
+                  div.l-receita-info-caption {{ recipe.difficulty | recipeDifficulty }}
 
           h3.l-receita-label Ingredientes
 
