--- a/public/views/receita.html
+++ b/public/views/receita.html
@@ -51,7 +51,7 @@
               </li>
               <li class="col-md-4">
                 <h5><i class="icon icon-beaker-1"> </i>
-                  <div class="l-receita-info-caption">{{ recipe.difficulty }}</div>
+                  <div class="l-receita-info-caption">{{ recipe.difficulty | recipeDifficulty }}</div>
                 </h5>
               </li>
             </ul>
