Fix errors on image displaying

--- a/public/views/receita.html
+++ b/public/views/receita.html
@@ -33,7 +33,7 @@
       <div ng-if="recipe" class="col-md-8">
         <article class="l-receita-content">
           <h1 class="l-receita-title">{{ recipe.name }}</h1>
-          <div class="l-receita-image"><img ng-src="assets/images/super-static/{{recipe.image}}" class="img-responsive"/></div>
+          <div class="l-receita-image"><img ng-src="assets/images/static/{{recipe.image}}" class="img-responsive"/></div>
           <div class="l-receita-info row">
             <ul>
               <li class="col-md-4">
