--- a/src/views/receita.jade
+++ b/src/views/receita.jade
@@ -54,7 +54,7 @@ div.page-receita
           h1.l-receita-title {{ recipe.name }}
 
           div.l-receita-image
-            img.img-responsive(ng-src="assets/images/super-static/{{recipe.image}}")
+            img.img-responsive(ng-src="assets/images/static/{{recipe.image}}")
 
           div.l-receita-info.row
             ul
@@ -95,5 +95,5 @@ div.page-receita
               div.notepad-item
                 |{{ step }}
               div.notepad-item
-                &nbsp;
+                |&nbsp;
             
