--- a/src/views/receitas.jade
+++ b/src/views/receitas.jade
@@ -101,7 +101,7 @@ div.page-home
                   i.icon.icon-beaker-1
                   span {{recipe.dificuldade | recipeDifficulty}}
 
-              img.img-responsive(data-ng-src="assets/images/super-static/{{recipe.imagem}}")
+              img.img-responsive(data-ng-src="assets/images/static/{{recipe.imagem}}")
 
             div.recipe-block-footer
               div.pull-left
