--- a/public/views/receitas.html
+++ b/public/views/receitas.html
@@ -62,7 +62,7 @@
                 <div class="item"><i class="icon icon-clock-1"></i><span>{{recipe.tempo_preparo}} Min</span></div>
                 <div class="item"><i class="icon icon-user-1"></i><span>{{recipe.num_porcoes}} Porções</span></div>
                 <div class="item"><i class="icon icon-beaker-1"></i><span>{{recipe.dificuldade | recipeDifficulty}}</span></div>
-              </div><img data-ng-src="assets/images/super-static/{{recipe.imagem}}" class="img-responsive"/>
+              </div><img data-ng-src="assets/images/static/{{recipe.imagem}}" class="img-responsive"/>
             </div>
             <div class="recipe-block-footer">
               <div class="pull-left"><strong>Postado em:</strong><em>14/12/2014</em></div><a href="#/receitas/{{recipe.id}}" class="link"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
