--- a/src/assets/stylesheets/global/components/_recipe-block.sass
+++ b/src/assets/stylesheets/global/components/_recipe-block.sass
@@ -78,6 +78,7 @@
   +border-bottom-radius($border-radius-base)
   position: relative
   top: 48px
+  margin-bottom: 63px
   padding: 12px
   background: #fff
   box-shadow: 0 2px 2px rgba(11, 25, 28, 0.1)
