--- a/public/views/receitas.html
+++ b/public/views/receitas.html
@@ -1,5 +1,5 @@
 
-<div class="page-home">
+<div class="page-home page-receita">
   <nav role="navigation" class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
@@ -21,9 +21,9 @@
       <div class="col-md-4">
         <nav role="navigation" class="main-menu">
           <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="#/">Home
+            <li><a href="#/">Home
                 <div class="link-icon"><i class="icon icon-shop"></i></div></a></li>
-            <li><a href="#/receitas">Receitas
+            <li class="active"><a href="#/receitas">Receitas
                 <div class="link-icon"><i class="icon icon-food-1"></i></div></a></li>
             <li><a href="#/receitas/nova">Nova Receita
                 <div class="link-icon"><i class="icon icon-doc-1"></i></div></a></li>
@@ -53,6 +53,21 @@
     </div>
   </div>
   <div class="container">
+    <div data-ng-repeat="receita in receitas" class="col-md-4">
+      <div class="recipe-block"><a href="#/receitas/{{receita.id}}">
+          <div class="recipe-block-title">{{receita.nome}}</div>
+          <div class="recipe-block-image">
+            <div class="recipe-block-caption">
+              <div class="item"><i class="icon icon-clock-1"></i><span>{{receita.tempo_preparo}} Min</span></div>
+              <div class="item"><i class="icon icon-user-1"></i><span>{{receita.num_porcoes}} Porções</span></div>
+              <div class="item"><i class="icon icon-beaker-1"></i><span>{{receita.dificuldade | recipeDifficulty}}</span></div>
+            </div><img data-ng-src="assets/images/static/{{receita.imagem}}" class="img-responsive"/>
+          </div>
+          <div class="recipe-block-footer">
+            <div class="pull-left"><strong>Postado em:</strong><em>14/12/2014</em></div><a href="#/receitas/{{receita.id}}" class="link"><i class="icon icon-plus-squared-alt"></i>Ver Receita</a>
+          </div></a></div>
+    </div>
+    <div class="row"><a href="#/page/{{prevPageLink}}" data-ng-click="saveRecipe()" data-ng-show="hasPrev &amp;&amp; !isFirstPage" class="l-receita-btn-submit btn-lg pull-left">Anterior</a><a href="#/page/{{nextPageLink}}" data-ng-click="saveRecipe()" data-ng-show="hasNext" class="l-receita-btn-submit btn-lg pull-right">Próxima</a></div>
     <div class="row l-main-section">
       <div data-ng-repeat="recipe in recipes" class="col-md-4">
         <div class="recipe-block"><a href="#/receitas/{{recipe.id}}">
